# FURY

./: CHANGELOG.md  Cargo.toml  DESIGN.md  PITCH.md  PLAN.md  README.md  SECURITY.md
.github/workflows/: ci.yml
fury-chat/: Cargo.toml
fury-chat/src/: main.rs
fury-core/: Cargo.toml
fury-core/src/: error.rs  event.rs  identity.rs  lib.rs  nip44.rs  transport.rs
fury-sign/: Cargo.toml
