[package]
name = "fury-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
fury-core = { path = "../fury-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
