[package]
name = "fury-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39 = { workspace = true }
bip32 = { workspace = true }
k256 = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
memsec = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bech32 = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
chacha20poly1305 = { workspace = true }
chacha20 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
async-tungstenite = { version = "0.28", features = ["tokio-runtime", "tokio-native-tls"] }
tokio-native-tls = "0.3"
url = { workspace = true }
futures = { workspace = true }
arti-client = { workspace = true }
tor-rtcompat = { workspace = true }
